# weather-predict

./: .gitignore  Copy_of_Transformers_for_timeseries.ipynb  Copy_of_Transformers_for_timeseries.py  LICENSE  compare_predictions.py  control.ipynb  control.py  flowchart.py  lstm-legacy.ipynb  lstm.ipynb  lstm.keras  lstm.py  lstm_new.ipynb  lstm_new.keras  lstm_new.py  model.keras  model.pkl  model_checkpoint.h5  model_performace.md  next30-days-weather-prediction-lstm.ipynb  predict.csv  predict_errors.py  pretrained_predict.py  prophet_predict.ipynb  prophet_predict.py  pyproject.toml  timeseries_weather_forecasting.ipynb  to_predict.csv  weather_predict.ipynb  weather_predict.py
data/: append_recent_data.py  combine.py  crawl_forecast.py  data.csv  forecast.csv  process.py  process_new.py  processed_data.csv
data/raw/: crawl.sh
data/raw_v2/: crawl.py
model.onnx/: fingerprint.pb  keras_metadata.pb  saved_model.pb
model.onnx/variables/: variables.data-00000-of-00001  variables.index
predictions/: predict-2.csv
predictions/5 Jul/: predict-21.csv  predict-31.csv
predictions/6 Jul/: predict-32.csv
predictions/submitted/: predict-1.csv  predict-6 Jul.csv
trained/: lstm-0.keras  lstm-1.keras  lstm-2.keras  lstm-24.keras  lstm-4.keras  lstm-5.keras  lstm-current.keras  scaler-general-minmax.save  scaler-general-standard.save  scaler-summer.save
