[tool.poetry]
name = "weather-predict"
version = "0.1.0"
description = ""
authors = ["wcyat <wcyat@wcyat.me>"]
readme = "README.md"
packages = [{include = "weather_predict"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
tensorflow = "^2.12.0"
pandas = "^2.0.2"
matplotlib = "^3.7.1"
scikit-learn = "^1.2.2"
prophet = "^1.1.4"
plotly = "^5.15.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
